Update explore page. Add user dropdown list in navbar

--- a/app/views/home/explore.jade
+++ b/app/views/home/explore.jade
@@ -2,6 +2,20 @@ extends ../layouts/default
 
 block main
   #content.container
+    //.page-header
+    //  ul.tabs
+    //    li.tab.active
+    //      | Calendar
+    //    li.tab
+    //      a(href='#') Gallery
+    //#calendar
+    //.page-header
+    //  ul.tabs
+    //    li.tab
+    //      a(href='#') Calendar
+    //    li.tab.active
+    //      | Gallery
+    .page-header Explore
     ul#activity-list.activity-list
       li.list-item
         .activity
@@ -10,8 +24,8 @@ block main
             .item-description
               .item-title title
               .item-content contentcontentcontentcontentcontentcontentcontentcontentcontent
-          ul.toolbar
-            li This is toolbar part
+          //ul.toolbar
+          //  li This is toolbar part
         .item-footer
           a.publisher(href='#') testuser
       li.list-item
@@ -21,8 +35,8 @@ block main
             .item-description
               .item-title title
               .item-content contentcontentcontentcontentcontentcontentcontentcontentcontent
-          ul.toolbar
-            li This is toolbar part
+          //ul.toolbar
+          //  li This is toolbar part
         .item-footer
           a.publisher(href='#') testuser
       li.list-item
@@ -32,8 +46,8 @@ block main
             .item-description
               .item-title title
               .item-content contentcontentcontentcontentcontentcontentcontentcontentcontent
-          ul.toolbar
-            li This is toolbar part
+          //ul.toolbar
+          //  li This is toolbar part
         .item-footer
           a.publisher(href='#') testuser
       li.list-item
@@ -43,8 +57,19 @@ block main
             .item-description
               .item-title title
               .item-content contentcontentcontentcontentcontentcontentcontentcontentcontent
-          ul.toolbar
-            li This is toolbar part
+          //ul.toolbar
+          //  li This is toolbar part
+        .item-footer
+          a.publisher(href='#') testuser
+      li.list-item
+        .activity
+          a.shot(href='#')
+            img.photo(src='./img/Jumbotron.jpg')
+            .item-description
+              .item-title title
+              .item-content contentcontentcontentcontentcontentcontentcontentcontentcontent
+          //ul.toolbar
+          //  li This is toolbar part
         .item-footer
           a.publisher(href='#') testuser
   .pagination
