--- a/app/views/includes/footer.jade
+++ b/app/views/includes/footer.jade
@@ -4,11 +4,11 @@
     .links
       ul
         li
-          a(href="#") Home
+          a(href="/") Home
         li
-          a(href="#") Home
+          a(href="/explore") Explore
         li
-          a(href="#") Home
+          a(href="#") About us
     .copyright
       | Copyright © 2014 PotatoNi. All rights reserved.
 
