--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -10,6 +10,7 @@ head
   link(rel="stylesheet", href="/css/dist/bootstrap.css")
   link(rel="stylesheet", href="/css/dist/slick.css")
   link(rel="stylesheet", href="/css/dist/font-awesome.css")
+  link(rel="stylesheet", href="/css/dist/calendar.min.css")
   link(rel="stylesheet", href="/css/site.css")
 
   //HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries
