refine tryit controller and add check for upload file extension

--- a/app/views/home/tryit.jade
+++ b/app/views/home/tryit.jade
@@ -19,7 +19,7 @@ block main
         .content
           .thumbnail
             img(src='/img/slide-thumbnail-example.jpg')
-          a#btn-control.btn.btn-info.btn-lg(href='#') Go Control!
+          a#btn-control.btn.btn-info.btn-lg(href='#', target="_blank") Go Control!
       li#step-share.step.hidden
         .header Share to Your Audience
         .content
