Finish create activity form.

--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -5,6 +5,9 @@ html(lang="en")
     #wrap
       include ../includes/header
       block main
-      
+
+    // only include when user login
+    include ../activity/new
+
     include ../includes/footer
     include ../includes/foot
