--- a/public/css/site.css
+++ b/public/css/site.css
@@ -377,6 +377,11 @@ a:hover {
   padding-right: 10px;
 }
 
+/* line 115, ../sass/_form.scss */
+.form-group .btn + .btn {
+  margin-left: 10px;
+}
+
 /* line 15, ../sass/site.scss */
 .full-width-slider {
   width: 100%;
