--- a/app/views/home/index.jade
+++ b/app/views/home/index.jade
@@ -69,7 +69,7 @@ html(lang="en")
           .content
             .thumbnail
               img(src='/img/slide-thumbnail-example.jpg')
-            a#btn-control.btn.btn-info.btn-lg(href='#') Go Control!
+            a#btn-control.btn.btn-info.btn-lg(href='#', target='_blank') Go Control!
         li#step-share.step.hidden
           div.headbar
             a.btn-back
