--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -5,6 +5,6 @@ script(src="/js/vendor/jquery.ui.widget.js")
 script(src="/js/jquery.iframe-transport.js")
 script(src="/js/jquery.fileupload.js")
 script(src="/js/underscore.min.js")
-script(src="/js/calendar.min.js")
+script(src="/js/bootstrap-datetimepicker.min.js")
 script(src="/js/site.js")
 
