--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -28,6 +28,8 @@ header.navbar.navbar-inverse.bs-docs-nav.navbar-fixed-top(role="banner")
           ul.dropdown-menu
             li
               a(href='#') Profile
+            li
+              a(href='#', data-toggle='modal', data-target='#modal-post-activity') Publish activity
             li.divider
             li
               a(href='#') Logout
