bugfix for title and navigation-bar

--- a/app/views/includes/head.jade
+++ b/app/views/includes/head.jade
@@ -1,7 +1,7 @@
 head
   meta(charset="utf-8")
 
-  title title
+  title #{title}
 
   //Sets initial viewport load and disables zooming 
   meta(name="viewport", content="width=device-width, initial-scale=1.0")
